<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/account"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="108dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/uname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/user"
            android:textSize="20sp" />



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_500"
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_layout"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/upass"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:textSize="20sp"
            android:hint="@string/password" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:text="@string/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:background="@color/indigo"
        android:onClick="userLogin"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_user_page"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/indigo"
        app:layout_constraintBottom_toTopOf="@+id/user_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <TextView
        android:id="@+id/edit_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/query_text"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:layout_marginTop="6dp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:linksClickable="true"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/create_account"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_query" />
</androidx.constraintlayout.widget.ConstraintLayout>